<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userViewModel"
            type="com.uae.emiratescar.viewmodel.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/details_screen_bg_gradient"
        tools:context=".ui.activities.SignInActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/margin_35"
            android:background="@drawable/splash_logo"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/pop_up_size"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"

            android:background="@drawable/shape_rounded_shadow"
            android:padding="@dimen/padding_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUserID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.30">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login_userid"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:textColor="@color/black"
                    android:textColorHint="@color/login_hint_txt_color"
                    android:text="@={userViewModel.email}"
                    android:textSize="@dimen/txt_size_18" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputUserID"
                app:layout_constraintVertical_bias="0.20">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/login_pass"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:textColor="@color/black"
                    android:text="@={userViewModel.password}"
                    android:textColorHint="@color/login_hint_txt_color"
                    android:textSize="@dimen/txt_size_18" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/button_selector"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_18"
                android:onClick="@{()-> userViewModel.onLoginClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputPass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/forgot"
                android:onClick="@{()-> userViewModel.onForgotClick()}"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/txt_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:text="@string/no_acc"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:text="@string/sign_up"
            android:onClick="@{()-> userViewModel.onSignUpClick()}"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_size_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>