<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dashViewModel"
            type="com.uae.emiratescar.viewmodel.DashboardViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/details_screen_bg_gradient"
        tools:context=".ui.activities.DashboardActivity">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/margin_35"
            android:background="@drawable/splash_logo"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/pop_up_size"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:background="@drawable/shape_rounded_shadow"
            android:padding="@dimen/padding_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo">


            <Button
                android:id="@+id/btn_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/dash_buy"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="@{()->dashViewModel.onBuyClick()}"
                app:layout_constraintVertical_bias="0.2" />

            <Button
                android:id="@+id/btn_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/button_selector"
                android:text="@string/dash_sell"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_18"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{()->dashViewModel.onSellClick()}"
                app:layout_constraintTop_toBottomOf="@+id/btn_buy" />

            <Button
                android:id="@+id/btn_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/button_selector"
                android:text="@string/dash_contact"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{()-> dashViewModel.onContactUsClick()}"
                app:layout_constraintTop_toBottomOf="@+id/btn_sell" />

            <Button
                android:id="@+id/btn_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/button_selector"
                android:text="@string/dash_about"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{()-> dashViewModel.onAboutUsClick()}"
                app:layout_constraintTop_toBottomOf="@+id/btn_contact" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>