<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="myViewModel"
            type="com.uae.emiratescar.viewmodel.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20">

        <TextView
            android:id="@+id/tv_about_usHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_3"
            android:textStyle="normal"
            android:text= "@string/about_us_content"
            android:textColor="@color/login_hint_txt_color"
            android:textSize="@dimen/txt_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/tvContactHint"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_3"
            android:text="@string/contact_no"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_usHint"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:padding="@dimen/padding_3"
            android:textColor="@color/login_hint_txt_color"
            android:textSize="@dimen/txt_size_16"
            app:layout_constraintStart_toEndOf="@+id/tvContactHint"
            app:layout_constraintTop_toBottomOf="@+id/tv_about_usHint"
            app:layout_constraintVertical_bias="0.10" />


        <TextView
            android:id="@+id/tvAddressHint"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_3"
            android:text="@string/address"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvContact"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_3"
            android:text="@string/p_address"
            android:textColor="@color/login_hint_txt_color"
            android:textSize="@dimen/txt_size_16"
            app:layout_constraintStart_toEndOf="@+id/tvAddressHint"
            app:layout_constraintTop_toBottomOf="@+id/tvContact"
            app:layout_constraintVertical_bias="0.10" />


        <TextView
            android:id="@+id/tvWebHint"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_3"
            android:text="@string/website"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress"
            app:layout_constraintVertical_bias="0.10" />

        <TextView
            android:id="@+id/tvWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/padding_3"
            android:textColor="@color/login_hint_txt_color"
            android:textSize="@dimen/txt_size_16"
            app:layout_constraintStart_toEndOf="@+id/tvWebHint"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress"
            app:layout_constraintVertical_bias="0.10" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>