<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details_screen_bg_gradient"
    tools:context=".ui.activities.ForgotPassActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/margin_35"
        android:background="@drawable/splash_logo"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/pop_up_size"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:padding="@dimen/padding_20"
        android:background="@drawable/shape_rounded_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_userid"
                android:maxLength="50"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/login_hint_txt_color"
                android:textSize="@dimen/txt_size_18" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputUserID"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/button_selector"
            android:textSize="@dimen/txt_size_18"
            android:textColor="@color/white"
            android:text="@string/submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>